set different navbar style depending on current route & created basic landing page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quiznology",
   "version": "0.0.1",
-  "description": "Quiznology is an open source platform for developers around the world to challenge themselves throw tests.",
+  "description": "Quiznology is an open source platform for developers around the world to challenge themselves through tests.",
   "contributors": [
     {
       "name": "José Vicente Sogorb",
