--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
     "vue": "^2.3.3",
+    "vue-awesome": "^2.3.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
