--- a/package.json
+++ b/package.json
@@ -43,17 +43,18 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue": "^2.3.3",
+    "autoprefixer": "^6.7.2",
     "bulma": "^0.4.2",
+    "es6-promise": "^4.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
+    "vue": "^2.3.3",
     "vue-authenticate": "^1.2.7",
     "vue-awesome": "^2.3.1",
     "vue-axios": "^2.0.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
-    "vuex": "^2.3.1",
-    "autoprefixer": "^6.7.2"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "axios": "^0.16.2",
